--- a/add-question.html
+++ b/add-question.html
@@ -58,6 +58,7 @@
 
     <div id="list" class="cards"></div>
 
+    <script src="configuration.js"></script>
     <script>
       let host = "http://localhost:8080";
       let questions = [];
