--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="navbar.css">
+    <title>Login</title>
   </head>
 
   <body>
@@ -16,6 +17,7 @@
       <li class="right"><a href="login.html">Login</a></li>
     </ul>
 
+    <script src="configuration.js"></script>
    
   </body>
 </html>
