--- a/quiz.html
+++ b/quiz.html
@@ -27,6 +27,7 @@
       </div>
     </div>
 
+    <script src="configuration.js"></script>
     <script>
       let host = "http://localhost:8080";
       const urlParams = new URLSearchParams(window.location.search);
