--- a/take-a-quiz.html
+++ b/take-a-quiz.html
@@ -21,6 +21,7 @@
 
       <div id="list" class="cards"></div>
 
+      <script src="configuration.js"></script>
       <script>
         let host = "http://localhost:8080";
         let quizzes = [];
